# hand2excal

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  start.sh  walkthrough.md
app/: cli.py  excalidraw_builder.py  server.py  vision.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ResultPanel.jsx  UploadZone.jsx
